<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:paddingTop="4dp" android:paddingLeft="6dp" android:orientation="vertical">


	<TextView android:text="@string/label_value" android:id="@+id/TextView01"
		android:layout_height="wrap_content" android:textStyle="bold"
		android:layout_width="wrap_content" android:textSize="18dp"></TextView>

	<EditText android:text="0" android:id="@+id/EditText01"
		android:layout_width="fill_parent" android:contentDescription="Значение"
		android:numeric="decimal" android:layout_height="wrap_content"></EditText>


	<TextView android:text="@string/label_date" android:id="@+id/TextView01"
		android:layout_height="wrap_content" android:textSize="18dp"
		android:visibility="invisible" android:layout_width="fill_parent"></TextView>

	<DatePicker android:id="@+id/DatePicker01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"></DatePicker>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/ListView01" android:layout_width="fill_parent"
		android:layout_marginTop="12dp" android:layout_height="wrap_content">

		<Button android:id="@+id/saveDataBtn" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/btn_add"></Button>

		<Button android:id="@+id/cancelDataBtn" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/btn_cancel"></Button>
			
	<Button android:text="@string/flashlight_on" android:id="@+id/FlashlightBtn"
		android:layout_gravity="right" android:layout_marginLeft="12dp"		
		android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	</LinearLayout>


</LinearLayout>
