<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button android:id="@+id/exportdbtosdbutton"
		android:layout_width="200dp" android:layout_height="wrap_content"
		android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
		android:text="@string/export_db_to_sd" />

	<Button android:id="@+id/importdbfromsdbutton"
		android:layout_width="200dp" android:layout_height="wrap_content"
		android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
		android:text="@string/import_db_from_sd" />
		
	<Button android:id="@+id/cleardbutton"
        android:layout_width="200dp" android:layout_height="wrap_content"
        android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
        android:text="@string/cleanup_db" />

</LinearLayout>
